--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,11 @@ jobs:
     - uses: actions/setup-python@v6
       with:
         python-version: '3.14' 
+    - name: PyInstaller Action
+      uses: Martin005/pyinstaller-action@v1.2.0
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Echo hello world
-      run: echo "Hello, world!"
+    - name: Build executable
+      run: pyinstaller .\StintFlow.spec
