--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,4 +24,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Build executable
-      run: pyinstaller .\StintFlow.spec
+      run: pyinstaller StintFlow.spec
