--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,9 @@ name: GitHub Actions Demo
 run-name: Release tag ${{ github.ref }}
 on:
   push:
-    # Pattern matched against refs/tags
-    tags:        
-      - '*'
+    # # Pattern matched against refs/tags
+    # tags:        
+    #   - '*'
 
 jobs:
   build:
@@ -23,5 +23,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        ls -la
     - name: Build executable
       run: pyinstaller StintFlow.spec
