--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,14 +2,16 @@ name: GitHub Actions Demo
 run-name: Release tag ${{ github.ref }}
 on:
   push:
-    # # Pattern matched against refs/tags
-    # tags:        
-    #   - '*'
+    # Pattern matched against refs/tags
+    tags:        
+      - '*'
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
     - name: Checkout code
@@ -26,3 +28,6 @@ jobs:
         ls -la
     - name: Build executable
       run: pyinstaller StintFlow.spec
+    - uses: ncipollo/release-action@v1
+      with:
+        artifacts: "dist/*"
