--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@ run-name: Release tag ${{ github.ref }}
 on:
   push:
     # Pattern matched against refs/tags
-    tags:        
-      - '*'
+    # tags:        
+    #   - '*'
 
 jobs:
   build:
@@ -25,9 +25,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        ls -la
     - name: Build executable
       run: pyinstaller StintFlow.spec
-    - uses: ncipollo/release-action@v1
-      with:
-        artifacts: "dist/*"
+    - name: zip executable
+      run: zip -r StintFlow.zip dist/StintFlow
+    - name: list directory
+      run: ls -la
+    # - uses: ncipollo/release-action@v1
+    #   with:
+    #     artifacts: "dist/*"
