--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       contents: write
 
@@ -27,8 +27,9 @@ jobs:
         pip install -r requirements.txt
     - name: Build executable
       run: pyinstaller StintFlow.spec
-    - name: zip executable
-      run: zip -r StintFlow.zip dist/StintFlow
+    - name: Zip build output
+      run: Compress-Archive -Path build/* -DestinationPath StintFlow.zip
+      shell: pwsh
     - uses: ncipollo/release-action@v1
       with:
         artifacts: "StintFlow.zip"
