--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,37 +1,57 @@
+# Workflow name is displayed in GitHub Actions UI
 name: GitHub Actions Demo
+# Customize the run name to show the git ref (i.e. tag) that triggered the job
 run-name: Release tag ${{ github.ref }}
+
+# Trigger the workflow when a new tag is pushed
 on:
   push:
-    # Pattern matched against refs/tags
-    tags:        
+    # Pattern matched against refs/tags; '*' means any tag name
+    tags:
       - '*'
 
 jobs:
+  # Single job called "build" that packages the application
   build:
 
+    # Use a Windows runner since PyInstaller spec is tailored for Windows
     runs-on: windows-latest
+    # Allow this job to create and update repository contents (needed for release action)
     permissions:
       contents: write
 
     steps:
+    # Step: checkout repository code, including git submodules
     - name: Checkout code
       uses: actions/checkout@v3
       with:
         submodules: true
+
+    # Step: set up Python environment
     - uses: actions/setup-python@v6
       with:
         python-version: '3.14' 
+
+    # Step: install PyInstaller (used to generate the executable)
     - name: Install PyInstaller
       run: pip install pyinstaller
+
+    # Step: install other Python dependencies from requirements.txt
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    # Step: run PyInstaller against the provided spec file to build distribution
     - name: Build executable
       run: pyinstaller StintFlow.spec
+
+    # Step: zip up the build output for release
     - name: Zip build output
       run: Compress-Archive -Path dist/StintFlow/* -DestinationPath StintFlow.zip
-      shell: pwsh
+      shell: pwsh  # use PowerShell for the Compress-Archive command
+
+    # Step: create a GitHub release, attaching the zip artifact and generating notes
     - uses: ncipollo/release-action@v1
       with:
         artifacts: "StintFlow.zip"
